// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text Field Test: after date set 1`] = `2012-01-10T23:00:00.000Z`;

exports[`Text Field Test: after datetime-local set 1`] = `2011-05-05T18:55:00.000Z`;

exports[`Text Field Test: after time set 1`] = `2011-05-05T14:20:00.000Z`;

exports[`Text Field Test: as number field 1`] = `
<input
  oninput={[Function]}
  type="number"
/>
`;

exports[`Text Field Test: as number field with number 1`] = `
<input
  oninput={[Function]}
  type="number"
  value={5432}
/>
`;

exports[`Text Field Test: as number field with string 1`] = `
<input
  oninput={[Function]}
  type="number"
  value="gfsdfasd"
/>
`;

exports[`Text Field Test: as number field with string number 1`] = `
<input
  oninput={[Function]}
  type="number"
  value="125"
/>
`;

exports[`Text Field Test: as slider field 1`] = `
<input
  oninput={[Function]}
  type="range"
/>
`;

exports[`Text Field Test: as slider field with number 1`] = `
<input
  oninput={[Function]}
  type="range"
  value={5432}
/>
`;

exports[`Text Field Test: as slider field with string 1`] = `
<input
  oninput={[Function]}
  type="range"
  value="gfsdfasd"
/>
`;

exports[`Text Field Test: as slider field with string number 1`] = `
<input
  oninput={[Function]}
  type="range"
  value="125"
/>
`;

exports[`Text Field Test: date with content 1`] = `
<input
  oninput={[Function]}
  type="date"
  value="2012-01-11"
/>
`;

exports[`Text Field Test: date with content 2`] = `
<input
  oninput={[Function]}
  type="date"
  value="Invalid date"
/>
`;

exports[`Text Field Test: datetime-local with content 1`] = `
<input
  oninput={[Function]}
  type="datetime-local"
  value="2018-02-22T07:55"
/>
`;

exports[`Text Field Test: datetime-local with content 2`] = `
<input
  oninput={[Function]}
  type="datetime-local"
  value="Invalid date"
/>
`;

exports[`Text Field Test: empty datetime-local field 1`] = `
<input
  oninput={[Function]}
  type="date"
  value="2011-05-05"
/>
`;

exports[`Text Field Test: empty datetime-local field 2`] = `
<input
  oninput={[Function]}
  type="time"
  value="Invalid date"
/>
`;

exports[`Text Field Test: empty render 1`] = `
<UNDEFINED
  schema={null}
/>
`;

exports[`Text Field Test: namefield 1`] = `
<input
  oninput={[Function]}
  type="text"
/>
`;

exports[`Text Field Test: namefield changed va 1`] = `
<input
  oninput={[Function]}
  type="text"
  value="myval"
/>
`;

exports[`Text Field Test: password field 1`] = `
<input
  oninput={[Function]}
  type="password"
/>
`;

exports[`Text Field Test: time with content 1`] = `
<input
  oninput={[Function]}
  type="time"
  value="Invalid date"
/>
`;

exports[`Text Field Test: time with content 2`] = `
<input
  oninput={[Function]}
  type="time"
  value="Invalid date"
/>
`;
